<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/history_date"
        android:textColor="@color/colorPrimary"
        android:text="@string/testDate"
        android:textSize="18sp"
        android:layout_marginTop="20dp">
    </TextView>

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/history_title"
        android:text="@string/testTitle"
        android:layout_toRightOf="@+id/history_date"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/history_time"
        android:layout_toRightOf="@+id/history_title"
        android:text="@string/testTime"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorPrimary">
    </TextView>

</RelativeLayout>