<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".AddGoal">

    <include
        android:id="@+id/historyToolbar"
        layout="@layout/tool_bar"></include>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/homeImage"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="15dp"
            app:srcCompat="@drawable/home" />

        <ImageView
            android:id="@+id/allProjectsImg"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="15dp"
            app:srcCompat="@drawable/newproject" />

        <ImageView
            android:id="@+id/newProjectImg"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="15dp"
            app:srcCompat="@drawable/addproject" />

        <ImageView
            android:id="@+id/userAccImg"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="15dp"
            app:srcCompat="@drawable/user" />

        <ImageView
            android:id="@+id/dashboardImg"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="15dp"
            app:srcCompat="@drawable/dashboard_icon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="390dp"
        android:layout_height="256dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="85dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></LinearLayout>

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="101dp"
        android:text="@string/dashboardSelectProject"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="220dp"
        android:layout_height="29dp"
        android:layout_marginStart="161dp"
        android:layout_marginLeft="161dp"
        android:layout_marginTop="101dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="165dp"
        android:text="@string/dashboardGoal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="222dp"
        android:layout_height="39dp"
        android:layout_marginStart="161dp"
        android:layout_marginLeft="161dp"
        android:layout_marginTop="152dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginLeft="161dp"
        android:layout_marginTop="253dp"
        android:text="@string/dashboardSaveGoal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>